data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1966.wast
;; 7. **Test Description**:     - **Scenario**: `ModuleA` imports a function from `ModuleB`, with `ModuleB` having a `br_if` instruction to skip further processing within an `if` block based on a stack-fed condition and return control to `ModuleA`.    - **Constraint Checked**: Proper handling of conditional branching within imported functions and stack consistency.    - **Relation to Control Flow**: Verifies that `br_if` correctly abandons an `if` block and maintains stack integrity upon return.

(assert_invalid 
  (module
    (import "ModuleB" "func" (func $importedFunc (result i32)))
    (func $test
      (block (result i32)
        (i32.const 1)
        (br_if 0 (call $importedFunc))
        (i32.const 0)
      )
      (i32.const 2)
    )
  )
  "type mismatch"
)